MSVC reports "SVGPropertyAnimator.h(94): error C2839: invalid return type 'T *' for overloaded 'operator ->'" with /std:c++20 https://bugs.webkit.org/show_bug.cgi?id=234546

Reviewed by Alex Christensen.

* svg/properties/SVGPropertyAnimator.h:
(WebCore::SVGPropertyAnimator::computeInheritedCSSPropertyValue const):
computeCSSPropertyValue protects the first arguemnt SVGElement.
computeInheritedCSSPropertyValue doesn't need to protect "parent".
Use Element* instead of RefPtr for "parent".



Canonical link: https://commits.webkit.org/245452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287300 268f45cc-cd09-0410-ab3c-d52691b4dbfc